// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnConfiguration component should render all columns 1`] = `
<DocumentFragment>
  <span
    class="uniprot-title__status icon--unreviewed"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 400 512"
    >
      <path
        d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: 3D structures 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Absorption 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Activity Regulation 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Allergenic Properties 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Alternative Products 1`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <hr />
  <h3
    id="isoID1"
  >
    isoID1
  </h3>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        syn value
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        value1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Alternative sequence 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Biotechnological Use 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Catalytic Activity 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <strong>
      1.2.4.5
    </strong>
     some reaction
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     direction 
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        Imported
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Cofactor 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </span>
    <section
      class="text-block"
    >
      value2
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: DNA-binding region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Date Created 1`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Date Modified 1`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Date Sequence Modified 1`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Developmental stage 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Disease Involvement 1`] = `
<DocumentFragment>
  <h3>
    DiseaseEntry Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </span>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            value2
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Description
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some description
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          See also
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <a
          class="external-link"
          href="https://www.omim.org/entry/3124"
          rel="noopener"
          target="_blank"
        >
          3124
          <svg
            fill="currentColor"
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
            />
          </svg>
        </a>
          
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Disruption Phenotype 1`] = `
<DocumentFragment>
  <h5>
    Isoform 4
  </h5>
  <section
    class="text-block"
  >
    value
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Domain 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: EC Number 1`] = `
<DocumentFragment>
  1.2.3.4 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Entry 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Entry Name 1`] = `
<DocumentFragment>
  <span>
    uniprot id
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Fragment 1`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Function 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Gene Names 1`] = `
<DocumentFragment>
  <div
    class="info-list info-list--compact"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <strong>
          some Gene 
          <button
            aria-controls="<UUID>"
            aria-expanded="false"
            class="evidence-tag svg-colour-unreviewed"
            data-testid="evidence-tag-trigger"
            type="button"
          >
            <svg
              fill="currentColor"
              height="12"
              viewBox="0 0 10 15"
              width="12"
            >
              <path
                d="M10 0H0v15l5-5 5 5V0z"
              />
            </svg>
            <span
              class="evidence-tag__label"
              title=""
            >
              1 automatic annotation
            </span>
          </button>
          <div
            class="evidence-tag-content "
            data-testid="evidence-tag-content"
            id="<UUID>"
          />
        </strong>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some Syn 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          ORF names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some orf 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 publication
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Ordered locus names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some locus 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Gene Ontology - Biological Process 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Gene Ontology - Cellular Component 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Gene Ontology - Molecular Function 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Gene Ontology 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Gene Ontology IDs 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Gene names (ORF) 1`] = `
<DocumentFragment>
  some orf 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 publication
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Gene names (Ordered locus) 1`] = `
<DocumentFragment>
  some locus 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Gene names (Primary) 1`] = `
<DocumentFragment>
  <div>
    some Gene
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Gene names (Synonyms) 1`] = `
<DocumentFragment>
  some Syn 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Induction 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Interacts with 1`] = `
<DocumentFragment>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Keyword IDs 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #KW-11111
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Keywords 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #keyword value
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Kinetics 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Length 1`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Lineage 1`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Mapped PubMed ID 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Mass 1`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Mass Spectrometry 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      isoform 1
    </h3>
    Molecular mass is 2.1 Da. Determined by LSI. note value
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Miscellaneous [CC] 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Nucleotide-binding region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Organism 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    scientific name (common name)  (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Organism 2`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606 
  </a>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    rel="noopener"
    target="_blank"
  >
    NCBI
    <svg
      fill="currentColor"
      viewBox="0 0 576 512"
      width="12.5"
    >
      <path
        d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Other binding site 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Other domain of interest 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Other site of interest 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Pathway 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Pharmaceutical Use 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Polymorphysm 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Post-Translational Modification 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Post-translationally modified residue 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Protein Families 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Protein existence 1`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Protein names 1`] = `
<DocumentFragment>
  <div
    class="info-list info-list--compact"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Recommended name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <strong>
          rec full Name
        </strong>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          EC number
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        1.2.3.4
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Short names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        recommended short name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Alternative names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            a full alt Name (short alt name1) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Cleaved into 1 chains
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            containsrec full Name (containsrecommended short name)  
            <strong>
              Alternative names: 
            </strong>
            containsa full alt Name (containsshort alt name1) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Submission names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            sub full Name
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Biotech name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        biotech
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          CD Antigen Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      />
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          INN Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Proteomes 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: PubMed ID 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/6789"
      >
        6789
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/123415"
      >
        123415
      </a>
    </li>
    <li>
      <button
        class="button tertiary"
        data-testid="expandable-message"
        type="button"
      >
        More items
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: RNA Editing 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at positions 
      <span>
        rna position 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </span>
    </div>
    <div>
      <span>
        value 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Redox Potential 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Score 1`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Sequence 1`] = `
<DocumentFragment>
  <div
    class="sequence"
  >
    <div
      class="sequence__sequence"
    >
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          >
            10
          </text>
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            SAPSQDFMRF
          </text>
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Sequence Caution 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <svg
        fill="currentColor"
        viewBox="0 0 576 512"
        width="12.5"
      >
        <path
          d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Sequence Caution 2`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <svg
        fill="currentColor"
        viewBox="0 0 576 512"
        width="12.5"
      >
        <path
          d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Sequence Similarities 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Sequence Version 1`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Subcellular Location 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div>
      <strong>
        location value
      </strong>
       
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
      : topology value 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </div>
    <section
      class="text-block"
    >
      value
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Subunit structure 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Temperature Dependence 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Tissue Specificity 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Toxic Dose 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Uncertainty in sequence 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: Variants 1`] = `
<DocumentFragment>
  <div
    class="loader-container"
  >
    <svg
      class="loader"
      height="100"
      viewBox="0 0 100 100"
      width="100"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M9 50c6.833-10.667 13.667-16 20.5-16S43.167 39.333 50 50s13.667 16 20.5 16S84.167 60.667 91 50"
          stroke="#3ca3ca"
          stroke-linecap="square"
          stroke-width="2"
        />
        <circle
          cx="9"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="30"
          cy="34"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="50"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="70"
          cy="66"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="91"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Version 1`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: Virus hosts 1`] = `
<DocumentFragment>
  <p>
    <a
      href="/taxonomy/9606"
    >
      scientific name (common name)  (synonyms 1)
    </a>
  </p>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: active site 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: calcium-binding region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: chain 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: coiled-coil region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: compositionally biased region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: cross-link 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: disulfide bond 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: glycosylation site 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: helix 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: initiator methionine 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: intramembrane region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: lipid moiety-binding region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: metal ion-binding site 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: mutagenesis site 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: non-consecutive residues 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: non-standard amino acid 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: non-terminal residue 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: pH Dependence 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns: peptide 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: propeptide 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: region of interest 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: repeat 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: sequence conflict 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: short sequence motif 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: signal peptide 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: strand 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: topological domain 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: transit peptide 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: transmembrane region 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: turn 1`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns: zinc finger region 1`] = `<DocumentFragment />`;
